# HP

.claude/: settings.local.json
.github/workflows/: deploy.yml
ai-agent-team/: .env.example  main.py  pyproject.toml
ai-agent-team/agents/: __init__.py  code_agent.py  document_agent.py  integration_agent.py  research_agent.py  task_agent.py
ai-agent-team/config/: agents.yaml  mcp.yaml  tools.yaml
ai-agent-team/core/: __init__.py  agent_base.py  agent_registry.py  memory.py  message_bus.py  orchestrator.py  tool_base.py
ai-agent-team/examples/: automation_example.py  basic_usage.py  web_app_integration.py
ai-agent-team/mcp/: server.py
ai-agent-team/memory/: store.py
ai-agent-team/memory/backends/: __init__.py  json_backend.py  sqlite_backend.py
ai-agent-team/tests/: test_memory.py  test_tools.py
ai-agent-team/tools/: __init__.py  code_exec.py  file_ops.py  http_client.py  web_search.py
project/: index.html
project/css/: style.css
project/js/: script.js
